Write up stuff and fiddled with figures

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -84,5 +84,14 @@ archivePrefix = {arXiv},
 }
 
 
-
+@article{shaffer,
+author = {Shaffer, Juliet},
+year = {1995},
+month = {01},
+pages = {561-84},
+title = {Multiple Hypothesis Testing},
+volume = {46},
+journal = {Annual Review of Psychology},
+doi = {10.1146/annurev.ps.46.020195.003021}
+}
 
